--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>BIT - FiveM Items Gallery</title>
+		<title>POPA - FiveM Items Gallery</title>
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link href="https://fonts.googleapis.com/css2?family=Bowlby+One&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet" />
@@ -826,11 +826,6 @@
 				<a href="https://bit-scripts.com" target="_blank">
 						<img src="./banner.jpg" alt="BIT Banner" style="width: 100%; margin-bottom: 10px; padding-right:10px;" />
 				</a>
-				<span>Images credits:</span>
-				<a href="https://github.com/McKleans-Scripts" target="_blank">McKleans Repo</a>
-				<a href="https://github.com/Griefa/gfa-items" target="_blank">Griefa Repo</a>
-				<a href="https://github.com/TankieTwitch/FREE-FiveM-Image-Library" target="_blank">TankieTwitch Fivem Repo</a>
-				<a href="https://github.com/TankieTwitch/FREE-RedM-Image-Library/" target="_blank">TankieTwitch RedM Repo</a>
 			</div>
 
 			<!-- Header -->
